[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Heart.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Ammo-Pack/Ammo-Pack-6.png" type="Texture" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 81.0
margin_bottom = 27.0
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureRect" parent="HBoxContainer"]
margin_right = 21.0
margin_bottom = 17.0
texture = ExtResource( 2 )

[node name="Heart2" type="TextureRect" parent="HBoxContainer"]
margin_left = 24.0
margin_right = 45.0
margin_bottom = 17.0
texture = ExtResource( 2 )

[node name="Heart3" type="TextureRect" parent="HBoxContainer"]
margin_left = 48.0
margin_right = 69.0
margin_bottom = 17.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -37.0
margin_top = -52.0
custom_constants/margin_right = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoPack" type="TextureRect" parent="MarginContainer"]
margin_right = 17.0
margin_bottom = 32.0
texture = ExtResource( 3 )
